fix: update figcaption text for clarity and adjust heading sizes for better readability

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,4 +1,5 @@
 /* tailwindcss */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,11 +18,11 @@
 
   /* Headings */
   h1 {
-    @apply font-bold pb-0 mb-[5px] text-[1.8em] leading-[1.4em];
+    @apply font-bold pb-0 mb-[5px] text-[2em] leading-[1.4em];
   }
 
   h2 {
-    @apply font-bold text-[1.5em] leading-[1.2em] mt-6 mb-3 text-header;
+    @apply font-bold text-[1.6em] leading-[1.2em] mt-6 mb-3 text-header;
   }
 
   h3 {
@@ -133,7 +134,7 @@
   }
 
   figcaption {
-    @apply text-[0.9em] mt-2 text-article-date italic;
+    @apply text-[0.9em] leading-[1.2em] mt-2 text-article-date italic;
   }
 
   /* Media elements */
@@ -203,20 +204,24 @@
   .articleTitle a:link,
   .articleTitle a:visited,
   .articleTitle h1 {
-    @apply text-article-title mt-[26px] pb-2 text-center mx-auto font-sans;
+    @apply text-article-title mt-[10px] pb-2 text-center mx-auto font-sans;
   }
 
   .articleFeedName {
-    @apply mb-[5px];
+    @apply mb-[1px];
+  }
+
+  .articleByLine {
+    @apply mb-[1px];
   }
 
   .articleDateline {
-    @apply text-article-date mb-[5px] text-center pt-4;
+    @apply text-article-date mb-[5px] text-center;
   }
 
   .articleDateline a:link,
   .articleDateline a:visited {
-    @apply font-normal text-article-date pt-4 text-center;
+    @apply font-normal text-article-date pt-2 text-center;
   }
 
   .externalLink {
